# freeEnergyCalculation

./: README.md  branchingProbabilities.py  getEnergy.py  pyproject.toml
example/: README.md  calc_FES_AB42.py
example/data/: DRID_AB42_1.npy  DRID_AB42_2.npy
freenet/: __init__.py  branchingProbabilities.py  cluster.py  clustering.py  getEnergy.py
freenet/utils/: __init__.py  getZSYM.py
